Front-end - Home and Login

--- a/qta/templates/home.html
+++ b/qta/templates/home.html
@@ -1,30 +1,371 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <style>
-            body {
-                background-color: #023373;
-            }
-            a {
-                text-decoration: none;
-                color: #fff;
-            }
-        </style>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My project</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QTA - Quick Ticket Assistant</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+
+        :root{
+            --green: #16a085;
+            --black: #444;
+            --light-color: #777;
+            --box-shadow:.5rem .5rem 0 rgba(22, 160, 133, .2);
+            --text-shadow:.4rem .4rem 0 rgba(0, 0, 0, .2);
+            --border:.2rem solid var(--green);
+        }
+
+        *{
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            outline: none;
+            border: none;
+            text-transform: capitalize;
+            transition: all .2s ease-out;
+            text-decoration: none;
+        }
+
+        section{
+            padding: 2rem 9%;
+        }
+
+        section:nth-child(even){
+            background: #f5f5f5;
+        }
+
+        .btn{
+            display: inline-block;
+            margin-top: 1rem;
+            padding: .5rem;
+            padding-left: 1rem;
+            border: var(--border);
+            border-radius: .5rem;
+            box-shadow: var(--box-shadow);
+            color: var(--green);
+            cursor: pointer;
+            font-size: 1.7rem;
+        }
+
+        .btn span{
+            padding: .7rem 1rem;
+            border-radius: .5rem;
+            background: var(--green);
+            color: #fff;
+            margin-left: .5rem;
+        }
+
+        .btn:hover{
+            background: var(--green);
+            color: #fff;
+        }
+
+        .btn:hover span{
+            color: var(--green);
+            background: #fff;
+            margin-left: 1rem;
+        }
+
+        html{
+            font-size: 62.5%;
+            overflow-x: hidden;
+            scroll-padding-top: 7rem;
+            scroll-behavior: smooth;
+
+        }
+
+        .header{
+            padding: 2rem 9%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: #fff;
+        }
+
+        .header .logo{
+            font-size: 2.5rem;
+            color: var(--black);
+        }
+
+        .header .logo i{
+            color: var(--green);
+        }
+
+        .header .navbar a{
+            font-size: 1.7rem;
+            color: var(--light-color);
+            margin-left: 2rem
+        }
+
+        .header .navbar a:hover{
+            color: var(--green);
+        }
+
+        .home{
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 1.5rem;
+            padding-top: 10rem;
+        }
+
+        .home .image{
+            flex: 1 1 45rem;
+        }
+
+        .home .image img{
+            width: 100%;
+
+        }
+
+        .home .content{
+            flex: 1 1 45rem;
+        }
+
+        .home .content h3{
+            font-size: 4.5rem;
+            color:  var(--black);
+            line-height: 1.8;
+            text-shadow: var(--text-shadow);
+        }
+
+        .home .content p{
+            font-size: 1.7rem;
+            color:  var(--light-color);
+            line-height: 1.8;
+            padding: 1rem 0;
+        }
+
+        .icons-container{
+            display: grid;
+            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+            padding-top: 5rem;
+            padding-bottom: 5rem;
+        }
+
+        .icons-container .icons{
+            border: var(--border);
+            box-shadow: var(--box-shadow);
+            border-radius: .5rem;
+            text-align: center;
+            padding: 2.5rem;
+        }
+
+        .icons-container .icons i{
+            font-size: 4.5rem;
+            color: var(--green);
+            padding-bottom: .7rem;
+        }
+
+        .icons-container .icons h3{
+            font-size: 4.5rem;
+            color: var(--black);
+            padding: .5rem 0;
+            text-shadow: var(--text-shadow);
+        }
+
+        .icons-container .icons p{
+            font-size: 1.7rem;
+            color: var(--light-color);
+        }
+
+        footer{
+            -webkit-text-size-adjust: 100%;
+            font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+            display: block;
+            color: rgba(255,255,255,0.7);
+            margin: auto;
+            font-size: 1rem;
+            font-weight: 400;
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+        
+        .default-ltr-cache-1b5mvc4 eslj5pt1{
+            -webkit-text-size-adjust: 100%;
+            font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+            color: rgba(255,255,255,0.7);
+            font-size: 1rem;
+            font-weight: 400;
+            box-sizing: border-box;
+            width: 100%;
+            display: inherit;
+            height: auto;
+        }
+        
+        .default-ltr-cache-1b5mvc4 eslj5pt1{
+            -webkit-text-size-adjust: 100%;
+            font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+            color: rgba(255,255,255,0.7);
+            font-size: 1rem;
+            font-weight: 400;
+            width: 100%;
+            display: inherit;
+            height: auto;
+            box-sizing: border-box;
+            margin-top: 0px;
+            margin-left: 0px;
+        }
+        
+        .footer-container {
+            background-color: var(--light-color);
+            color: #fff;
+            padding: 20px 0;
+            font-size: 14px;
+        }
+        
+        .footer-content {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+        
+        .contact-info {
+            margin-bottom: 10px;
+        }
+        
+        .footer-links ul {
+            list-style: none;
+            padding: 0;
+        }
+        
+        .footer-links li {
+            margin-bottom: 5px;
+        }
+        
+        .footer-links a {
+            text-decoration: none;
+            color: #fff;
+            transition: color 0.3s;
+        }
+        
+        .footer-links a:hover {
+            color: var(--green); 
+        }
+        
+        .language-picker label {
+            margin-right: 10px;
+            font-weight: bold;
+        }
+        
+        .language-picker select {
+            border: none;
+            background-color: transparent;
+            color: var(--green);
+            font-weight: bold;
+        }
+        
+        .footer-info {
+            margin-top: 10px;
+            -webkit-text-fill-color: transparent;
+            -webkit-text-stroke: 1px #fff;
+        }
+    </style>
+</head>
+<body>
+
+    <header class="header">
+        <a href="#" class="logo"><i class="fas fa-heartbeat"></i> QTA</a>
     
-    <body>
-        {% extends 'base.html' %}
-        {% block content %}
-        <div style="width: 1046.41px; height: 662.23px; position: relative">
-            <img style="width: 524.41px; height: 490.23px; left: 600px; top: 0px; position: absolute" src="https://i.postimg.cc/MKs1BPD5/doctores.png" />
-            <div style="width: 424.78px; height: 152.95px; left: 80px; top: 0px; position: absolute; color: #63E0FF; font-size: 65px; font-family: Lato; font-weight: 700; word-wrap: break-word">Welcome to<br/>QTA Software</div>
-            <div style="width: 463.58px; height: 263.75px; left: 82.51px; top: 200px; position: absolute; color: #ffffff; font-size: 25px; font-family: Lato; font-weight: 400; word-wrap: break-word">Our QTA software is designed to simplify and optimise your support<br/>experience. Whether you run a business, a healthcare organisation<br/>or any entity that requires an effective technical problem management<br/>system, QTA is here to make your life easier.</div>
-            <div style="width: 183.54px; height: 60.79px; left: 180px; top: 470px; position: absolute; background: #34A2FF; border-radius: 100px"></div>
-            <a href= {% url "mainscreen" %} style= "width: 78.66px; height: 29.41px; left: 238px; top: 485px; position: absolute; color: white; font-size: 20px; font-family: Lato; font-weight: 700; word-wrap: break-word">START</a>
+        <nav class="navbar">
+            <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Service</a>
+            <a class="nav-link" href="#">More</a>
+            {% if request.user.is_authenticated %}
+            <a class="nav-link" href={% url "exit" %}>Sign out</a>
+            {% else %}
+            <a class="nav-link" href={% url "login" %} >Sign in</a>
+            {% endif %}
+        </nav>
+    </header>
+
+    <section class="home" id="home">
+        <div class="image">
+            <img src="https://i.postimg.cc/ZR05rFkY/Radiography-bro.png" alt="">
+        </div>
+        
+        <div class="content">
+            <h3>Welcome to QTA</h3>
+            <p>
+                Our QTA software is designed to simplify and optimise your support
+                experience. Whether you run a business, a healthcare organisation
+                or any entity that requires an effective technical problem management
+                system, QTA is here to make your life easier.
+            </p>
+            <a href={% url "mainscreen" %} class="btn">Get Start <span class="fas fa-chevron-right"></span></a>
+        </div>
+
+    </section>
+
+    <section class="icons-container">
+        <div class="icons">
+            <i class="fas fa-user-md"></i>
+            <h3>+140</h3>
+            <p>assistants at work</p>
+        </div>
+
+        <div class="icons">
+            <i class="fas fa-users"></i>
+            <h3>+1040</h3>
+            <p>satisfied patients</p>
+        </div>
+
+        <div class="icons">
+            <i class="fas fa-procedures"></i>
+            <h3>+500</h3>
+            <p>bed facility</p>
+        </div>
+
+        <div class="icons">
+            <i class="fas fa-hospital"></i>
+            <h3>+80</h3>
+            <p>hospitals present</p>
+        </div>
+    </section>
+
+    <footer class="footer-container">
+        <div class="footer-content">
+          <div class="contact-info">
+            ¿Preguntas? Llama al <a href="tel:3207675375">320 767 53 75</a>
           </div>
-        {% endblock content %}
-    </body>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#">Preguntas frecuentes</a></li>
+              <li><a href="#">Centro de ayuda</a></li>
+              <li><a href="#">Cuenta</a></li>
+            </ul>
+          </div>
+          <div class="language-picker">
+            <label for="language-select">Selecciona el idioma</label>
+            <select id="language-select" name="LanguageSelect">
+              <option selected lang="es" value="es-CO">Español</option>
+              <option lang="en" value="en-CO">English</option>
+            </select>
+          </div>
+          <div class="footer-info">
+            QTA Colombia
+          </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
