--- a/qta/templates/registration/login.html
+++ b/qta/templates/registration/login.html
@@ -1,63 +1,270 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-   <head>
-      <title>Login</title>
-   </head>
-   <body>
-      {% extends 'base.html' %}
-      {% block content %}
-      <section class="vh-100" style="background-color: #63E0FF;">
-         <div class="container py-5 h-100">
-         <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col col-xl-10">
-               <div class="card" style="border-radius: 1rem;">
-               <div class="row g-0">
-                  <div class="col-md-6 col-lg-5 d-none d-md-block">
-                     <img src="https://www.enfermeriayseguridaddelpaciente.com/wp-content/uploads/2023/09/doctor-1228629_1920.jpg"
-                     alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
-                  </div>
-                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                     <div class="card-body p-4 p-lg-5 text-black">
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>login</title>
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+    <style>
+      *{
+         padding: 0;
+         margin: 0;
+         box-sizing: border-box;
+      }
       
-                     <form actions="" method='post'>
-                        {% csrf_token %}
+      body{
+          font-family: 'Poppins', sans-serif;
+          overflow: hidden;
+      }
       
-                        <div class="d-flex align-items-center mb-3 pb-1">
-                           <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                           <span class="h1 fw-bold mb-0">QTA</span>
-                        </div>
+      .wave{
+         position: fixed;
+         bottom: 0;
+         left: 0;
+         height: 100%;
+         z-index: -1;
+      }
       
-                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+      .container{
+          width: 100vw;
+          height: 100vh;
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-gap :7rem;
+          padding: 0 2rem;
+      }
       
-                        <div class="form-outline mb-4">
-                           <input type="text" name="username" id='' placeholder='Nombre de usuario' class="form-control form-control-lg" />
-                           <label class="form-label" for="form2Example17">Username</label>
-                        </div>
+      .img{
+         display: flex;
+         justify-content: flex-end;
+         align-items: center;
+      }
       
-                        <div class="form-outline mb-4">
-                           <input type="password" name="password" id='' placeholder='Contraseña' class="form-control form-control-lg" />
-                           <label class="form-label" for="form2Example27">Password</label>
-                        </div>
+      .login-content{
+         display: flex;
+         justify-content: flex-start;
+         align-items: center;
+         text-align: center;
+      }
       
-                        <div class="pt-1 mb-4">
-                           <button type='submit' class="btn btn-dark btn-lg btn-block">Login</button>
-                        </div>
+      .img img{
+         width: 500px;
+      }
       
-                        {% comment %} <a class="small text-muted" href="#!">Forgot password?</a>
-                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="#!"
-                           style="color: #393f81;">Register here</a></p>
-                        <a href="#!" class="small text-muted">Terms of use.</a>
-                        <a href="#!" class="small text-muted">Privacy policy</a> {% endcomment %}
-                     </form>
+      form{
+         width: 360px;
+      }
       
-                     </div>
-                  </div>
-               </div>
-               </div>
-            </div>
-         </div>
-         </div>
-      </section>
-      {% endblock %}
-   </body>
+      .login-content img{
+          height: 100px;
+      }
+      
+      .login-content h2{
+         margin: 15px 0;
+         color: #333;
+         text-transform: uppercase;
+         font-size: 2.9rem;
+      }
+      
+      .login-content .input-div{
+         position: relative;
+          display: grid;
+          grid-template-columns: 7% 93%;
+          margin: 25px 0;
+          padding: 5px 0;
+          border-bottom: 2px solid #d9d9d9;
+      }
+      
+      .login-content .input-div.one{
+         margin-top: 0;
+      }
+      
+      .i{
+         color: #d9d9d9;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+      }
+      
+      .i i{
+         transition: .3s;
+      }
+      
+      .input-div > div{
+          position: relative;
+         height: 45px;
+      }
+      
+      .input-div > div > h5{
+         position: absolute;
+         left: 10px;
+         top: 50%;
+         transform: translateY(-50%);
+         color: #999;
+         font-size: 18px;
+         transition: .3s;
+      }
+      
+      .input-div:before, .input-div:after{
+         content: '';
+         position: absolute;
+         bottom: -2px;
+         width: 0%;
+         height: 2px;
+         background-color: #38d39f;
+         transition: .4s;
+      }
+      
+      .input-div:before{
+         right: 50%;
+      }
+      
+      .input-div:after{
+         left: 50%;
+      }
+      
+      .input-div.focus:before, .input-div.focus:after{
+         width: 50%;
+      }
+      
+      .input-div.focus > div > h5{
+         top: -5px;
+         font-size: 15px;
+      }
+      
+      .input-div.focus > .i > i{
+         color: #38d39f;
+      }
+      
+      .input-div > div > input{
+         position: absolute;
+         left: 0;
+         top: 0;
+         width: 100%;
+         height: 100%;
+         border: none;
+         outline: none;
+         background: none;
+         padding: 0.5rem 0.7rem;
+         font-size: 1.2rem;
+         color: #555;
+         font-family: 'poppins', sans-serif;
+      }
+      
+      .input-div.pass{
+         margin-bottom: 4px;
+      }
+      
+      a{
+         display: block;
+         text-align: right;
+         text-decoration: none;
+         color: #999;
+         font-size: 0.9rem;
+         transition: .3s;
+      }
+      
+      a:hover{
+         color: #38d39f;
+      }
+      
+      .btn{
+         display: block;
+         width: 100%;
+         height: 50px;
+         border-radius: 25px;
+         outline: none;
+         border: none;
+         background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+         background-size: 200%;
+         font-size: 1.2rem;
+         color: #fff;
+         font-family: 'Poppins', sans-serif;
+         text-transform: uppercase;
+         margin: 1rem 0;
+         cursor: pointer;
+         transition: .5s;
+      }
+      .btn:hover{
+         background-position: right;
+      }
+
+      @media screen and (max-width: 1050px){
+         .container{
+            grid-gap: 5rem;
+         }
+      }
+      
+      @media screen and (max-width: 1000px){
+         form{
+            width: 290px;
+         }
+      
+         .login-content h2{
+              font-size: 2.4rem;
+              margin: 8px 0;
+         }
+      
+         .img img{
+            width: 400px;
+         }
+      }
+      
+      @media screen and (max-width: 900px){
+         .container{
+            grid-template-columns: 1fr;
+         }
+      
+         .img{
+            display: none;
+         }
+      
+         .wave{
+            display: none;
+         }
+      
+         .login-content{
+            justify-content: center;
+         }
+      }
+    </style>
+</head>
+<body>
+
+   <img class="wave" src="https://i.postimg.cc/TP6gGPyq/wave.png">
+	<div class="container">
+		<div class="img">
+			<img src="https://i.postimg.cc/NGZhgytH/undraw-app-installation-re-h36x.png">
+		</div>
+		<div class="login-content">
+			<form actions="" method='post'>
+            {% csrf_token %}
+				<img src="https://i.postimg.cc/T3Xp54RT/undraw-male-avatar-g98d.png">
+				<h2 class="title">Welcome</h2>
+           		<div class="input-div one">
+           		   <div class="i">
+           		   		<i class="fas fa-user"></i>
+           		   </div>
+           		   <div class="div">
+           		   		<input type="text" name="username" id='' placeholder='Username' class="form-control form-control-lg" />
+           		   </div>
+           		</div>
+           		<div class="input-div pass">
+           		   <div class="i"> 
+           		    	<i class="fas fa-lock"></i>
+           		   </div>
+           		   <div class="div">
+                     <input type="password" name="password" id='' placeholder='Password' class="form-control form-control-lg" />
+            	   </div>
+            	</div>
+            	<a href="#">Forgot Password?</a>
+            	<button type='submit' class="btn btn-dark btn-lg btn-block">Login</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
