Front-end - MainScreen and ticket number automatic

--- a/qta/templates/home.html
+++ b/qta/templates/home.html
@@ -282,7 +282,7 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo"><i class="fas fa-heartbeat"></i> QTA</a>
+        <a href={% url 'home' %} class="logo"><i class="fas fa-heartbeat"></i> QTA</a>
     
         <nav class="navbar">
             <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
