--- a/qta/templates/mainscreen.html
+++ b/qta/templates/mainscreen.html
@@ -4,12 +4,397 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>My project</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+      <style>
+         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+ 
+         :root{
+             --green: #16a085;
+             --black: #444;
+             --light-color: #777;
+             --box-shadow:.5rem .5rem 0 rgba(22, 160, 133, .2);
+             --text-shadow:.4rem .4rem 0 rgba(0, 0, 0, .2);
+             --border:.2rem solid var(--green);
+         }
+ 
+         *{
+             font-family: 'Poppins', sans-serif;
+             margin: 0;
+             padding: 0;
+             box-sizing: border-box;
+             outline: none;
+             border: none;
+             text-transform: capitalize;
+             transition: all .2s ease-out;
+             text-decoration: none;
+         }
+ 
+         section{
+             padding: 2rem 9%;
+         }
+ 
+         section:nth-child(even){
+             background: #f5f5f5;
+         }
+ 
+         .btn{
+             display: inline-block;
+             margin-top: 1rem;
+             padding: .5rem;
+             padding-left: 1rem;
+             border: var(--border);
+             border-radius: .5rem;
+             box-shadow: var(--box-shadow);
+             color: var(--green);
+             cursor: pointer;
+             font-size: 1.7rem;
+         }
+ 
+         .btn span{
+             padding: .7rem 1rem;
+             border-radius: .5rem;
+             background: var(--green);
+             color: #fff;
+             margin-left: .5rem;
+         }
+ 
+         .btn:hover{
+             background: var(--green);
+             color: #fff;
+         }
+ 
+         .btn:hover span{
+             color: var(--green);
+             background: #fff;
+             margin-left: 1rem;
+         }
+ 
+         html{
+             font-size: 62.5%;
+             overflow-x: hidden;
+             scroll-padding-top: 7rem;
+             scroll-behavior: smooth;
+ 
+         }
+ 
+         .header{
+             padding: 2rem 9%;
+             position: fixed;
+             top: 0;
+             left: 0;
+             right: 0;
+             z-index: 1000;
+             box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+             display: flex;
+             align-items: center;
+             justify-content: space-between;
+             background: #fff;
+         }
+ 
+         .header .logo{
+             font-size: 2.5rem;
+             color: var(--black);
+         }
+ 
+         .header .logo i{
+             color: var(--green);
+         }
+ 
+         .header .navbar a{
+             font-size: 1.7rem;
+             color: var(--light-color);
+             margin-left: 2rem
+         }
+ 
+         .header .navbar a:hover{
+             color: var(--green);
+         }
+
+         .icons-container{
+             display: grid;
+             gap: 2rem;
+             grid-template-columns: repeat(3, 1fr);
+             padding-top: 5rem;
+             padding-bottom: 5rem;
+         }
+ 
+         .icons-container .icons{
+             border: var(--border);
+             box-shadow: var(--box-shadow);
+             border-radius: .5rem;
+             text-align: center;
+             padding: 2.5rem;
+         }
+ 
+         .icons-container .icons h3{
+             font-size: 4.5rem;
+             color: var(--black);
+             padding: .5rem 0;
+             text-shadow: var(--text-shadow);
+         }
+ 
+         .icons-container .icons p{
+             font-size: 1.7rem;
+             color: var(--light-color);
+         }
+ 
+         footer{
+             -webkit-text-size-adjust: 100%;
+             font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+             display: block;
+             color: rgba(255,255,255,0.7);
+             margin: auto;
+             font-size: 1rem;
+             font-weight: 400;
+             margin-top: 2rem;
+             margin-bottom: 2rem;
+             padding-left: 2rem;
+             padding-right: 2rem;
+         }
+         
+         .default-ltr-cache-1b5mvc4 eslj5pt1{
+             -webkit-text-size-adjust: 100%;
+             font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+             color: rgba(255,255,255,0.7);
+             font-size: 1rem;
+             font-weight: 400;
+             box-sizing: border-box;
+             width: 100%;
+             display: inherit;
+             height: auto;
+         }
+         
+         .default-ltr-cache-1b5mvc4 eslj5pt1{
+             -webkit-text-size-adjust: 100%;
+             font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+             color: rgba(255,255,255,0.7);
+             font-size: 1rem;
+             font-weight: 400;
+             width: 100%;
+             display: inherit;
+             height: auto;
+             box-sizing: border-box;
+             margin-top: 0px;
+             margin-left: 0px;
+         }
+         
+         .footer-container {
+             background-color: var(--light-color);
+             color: #fff;
+             padding: 20px 0;
+             font-size: 14px;
+         }
+         
+         .footer-content {
+             display: flex;
+             flex-wrap: wrap;
+             justify-content: space-between;
+             max-width: 1200px;
+             margin: 0 auto;
+             padding: 0 20px;
+         }
+         
+         .contact-info {
+             margin-bottom: 10px;
+         }
+         
+         .footer-links ul {
+             list-style: none;
+             padding: 0;
+         }
+         
+         .footer-links li {
+             margin-bottom: 5px;
+         }
+         
+         .footer-links a {
+             text-decoration: none;
+             color: #fff;
+             transition: color 0.3s;
+         }
+         
+         .footer-links a:hover {
+             color: var(--green); 
+         }
+         
+         .language-picker label {
+             margin-right: 10px;
+             font-weight: bold;
+         }
+         
+         .language-picker select {
+             border: none;
+             background-color: transparent;
+             color: var(--green);
+             font-weight: bold;
+         }
+         
+         .footer-info {
+             margin-top: 10px;
+             -webkit-text-fill-color: transparent;
+             -webkit-text-stroke: 1px #fff;
+         }
+
+          .searchBar {
+            display: flex;
+            padding-top: 10rem;
+          }
+          
+          .searchInput {
+            flex: 1; /* Para que el input ocupe el espacio restante */
+            weight: 100%;
+            height: 90px;
+            border-radius: 10px;
+            background-color: #f2f2f2;
+            border: 1px solid rgba(0, 0, 0, 0.12);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.12);
+            padding: 10px;
+            font-size: 1.4rem; /* Tamaño de fuente ajustado */
+            outline: none;
+            position: relative;
+          }
+          
+          .searchInput:focus {
+            outline: none;
+          }
+
+          .btn2{
+             display: inline-block;
+             margin-top: 1rem;
+             padding: .5rem;
+             padding-left: 1rem;
+             border: var(--border);
+             border-radius: .5rem;
+             box-shadow: var(--box-shadow);
+             color: var(--green);
+             cursor: pointer;
+             font-size: 1.7rem;
+         }
+
+         .btn2:hover{
+             background: var(--green);
+             color: #fff;
+         }
+
+         .form-control {
+            border: none;
+            background-color: #fff;
+            border-radius: .5rem;
+            color: var(--green);
+            font-weight: bold;
+            weight: 100%;
+        }
+
+        .selectElement{
+         weight: 50%;
+        }
+
+        h5 {
+         color: var(--green);
+         font-size: 4.5rem;
+        }
+
+     </style>
    </head>
     
    <body>
-      {% extends 'base.html' %}
-      {% block content %}
-         <br>
+      <header class="header">
+         <a href={% url 'home' %} class="logo"><i class="fas fa-heartbeat"></i> QTA</a>
+     
+         <nav class="navbar">
+             <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
+             <a class="nav-link" href="#">About</a>
+             <a class="nav-link" href="#">Service</a>
+             <a class="nav-link" href="#">More</a>
+             {% if request.user.is_authenticated %}
+             <a class="nav-link" href={% url "exit" %}>Sign out</a>
+             {% else %}
+             <a class="nav-link" href={% url "login" %} >Sign in</a>
+             {% endif %}
+         </nav>
+     </header>
+
+     <section class="searchBar"> 
+      <form action="" class="searchInput">
+         <select class="form-control selectElement" aria-label="Small select example" type="text" id="campo5" name="searchState">
+            <option selected>{{ticket.state}}</option>
+            <option value="New">New</option>
+            <option value="In progress">In progress</option>
+            <option value="Completed">Completed</option>
+         </select>
+         <button type="submit" class="btn2">Search</button>
+         <a href={% url "ticket" %} class="btn btn-primary">New Ticket</a>
+         <h4 style="color: #16a085">HI! {{ user.username | upper}}</h4> 
+       </form>
+
+  </section>
+
+     <section class="icons-container" id="icons-container">
+         {% for ticket in tickets %}
+         {% if ticket.priority == "Very important" and ticket.state != 'Completed'%}
+         <div class="icons">
+            <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
+            <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
+            <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
+            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
+            <b>Place: </b><p class="place">{{ ticket.place}}</p>
+            <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
+         </div>
+         {% endif %}
+         {% endfor %}
+
+         {% for ticket in tickets %}
+         {% if ticket.priority == "Important" and ticket.state != 'Completed'%}
+         <div class="icons">
+            <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
+            <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
+            <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
+            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
+            <b>Place: </b><p class="place">{{ ticket.place}}</p>
+            <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
+         </div>
+         {% endif %}
+         {% endfor %}
+
+         {% for ticket in tickets %}
+         {% if ticket.priority == "Urgent" and ticket.state != 'Completed'%}
+         <div class="icons">
+            <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
+            <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
+            <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
+            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
+            <b>Place: </b><p class="place">{{ ticket.place}}</p>
+            <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
+         </div>
+         {% endif %}
+         {% endfor %}
+
+         {% for ticket in tickets %}
+         {% if ticket.priority == "Regular" and ticket.state != 'Completed'%}
+         <div class="icons">
+            <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
+            <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
+            <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
+            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
+            <b>Place: </b><p class="place">{{ ticket.place}}</p>
+            <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
+         </div>
+         {% endif %}
+         {% endfor %}
+      </section>
+    
+   </body>
+</html>
+
+{% comment %} <br>
             <h4 style="color: #ffffff">HI! {{ user.username | upper}}</h4>       
             <form action="">
                <div class="mb-3">
@@ -101,7 +486,4 @@
                   </div>
                {% endif %}
             {% endfor %}
-         </div>
-      {% endblock content %}
-   </body>
-</html>
+         </div> {% endcomment %}
