--- a/qta/templates/more_info.html
+++ b/qta/templates/more_info.html
@@ -1,4 +1,291 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QTA - Quick Ticket Assistant</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+
+        :root{
+            --green: #16a085;
+            --black: #444;
+            --light-color: #777;
+            --box-shadow:.5rem .5rem 0 rgba(22, 160, 133, .2);
+            --text-shadow:.4rem .4rem 0 rgba(0, 0, 0, .2);
+            --border:.2rem solid var(--green);
+        }
+
+        *{
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            outline: none;
+            border: none;
+            text-transform: capitalize;
+            transition: all .2s ease-out;
+            text-decoration: none;
+        }
+
+        section{
+            padding: 2rem 9%;
+        }
+
+        section:nth-child(even){
+            background: transparent;
+        }
+
+        .btn{
+            display: inline-block;
+            margin-top: 1rem;
+            padding: .5rem;
+            padding-left: 1rem;
+            border: var(--border);
+            border-radius: .5rem;
+            box-shadow: var(--box-shadow);
+            color: var(--green);
+            cursor: pointer;
+            font-size: 1.7rem;
+        }
+
+        .btn span{
+            padding: .7rem 1rem;
+            border-radius: .5rem;
+            background: var(--green);
+            color: #fff;
+            margin-left: .5rem;
+        }
+
+        .btn:hover{
+            background: var(--green);
+            color: #fff;
+        }
+
+        .btn:hover span{
+            color: var(--green);
+            background: #fff;
+            margin-left: 1rem;
+        }
+
+        html{
+            font-size: 62.5%;
+            overflow-x: hidden;
+            scroll-padding-top: 7rem;
+            scroll-behavior: smooth;
+
+        }
+
+        .header{
+            padding: 2rem 9%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: #fff;
+        }
+
+        .header .logo{
+            font-size: 2.5rem;
+            color: var(--black);
+        }
+
+        .header .logo i{
+            color: var(--green);
+        }
+
+        .header .navbar a{
+            font-size: 1.7rem;
+            color: var(--light-color);
+            margin-left: 2rem
+        }
+
+        .header .navbar a:hover{
+            color: var(--green);
+        }
+
+        body{
+            display: flex;
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            background: linear-gradient(135deg, #16a085, #29cdb2);
+        }
+
+        .Formulario{
+            margin-top: 18rem;
+        }
+        
+        .container{
+            max-width: 700px;
+            width: 100%;
+            background: #fff;
+            padding: 25px 30px;
+            border-radius: 5px;
+        }
+
+        .container .title{
+            font-size: 25px;
+            font-weight: 500;
+            position: relative;
+        }
+
+        .container .title::before{
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            height: 3px;
+            width: 30px;
+            background: linear-gradient(135deg, #16a085, #29cdb2);
+        }
+
+        .container form .user-details{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin: 20px 0 12px 0;
+        }
+
+        form .user-details .input-box{
+            margin-bottom: 15px;
+            width: calc(100% / 2 - 20px);
+        }
+
+        .user-details .input-box .details{
+            display: block;
+            font-weight: 500;
+            margin-bottom: 5px;
+        }
+
+        .user-details .input-box input{
+            height: 45px;
+            width: 100%;
+            outline: none;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            padding-left: 15px;
+            font-size: 16px;
+            border-bottom-width: 2px;
+            transition: all 0.3s ease;
+        }
+
+        .user-details .input-box input:focus,
+        .user-details .input-box input:valid{
+            border-color: #29cdb2;
+        }
+
+
+    </style>
+</head>
+<body>
+
+    <header class="header">
+        <a href={% url 'home' %} class="logo"><i class="fas fa-heartbeat"></i> QTA</a>
+    
+        <nav class="navbar">
+            <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Service</a>
+            <a class="nav-link" href="#">More</a>
+            {% if request.user.is_authenticated %}
+            <a class="nav-link" href={% url "exit" %}>Sign out</a>
+            {% else %}
+            <a class="nav-link" href={% url "login" %} >Sign in</a>
+            {% endif %}
+        </nav>
+    </header>
+
+    <section class="Formulario">
+      <div class="container">
+        <div class="title">Ticket information {{ ticket.id_unico }}</div>
+        <form actions="" method='post'>
+            {% csrf_token %}
+            <input type="hidden" name="id_unico" value="{{ ticket.id_unico }}">
+            <div class="user-details">
+                <div class="input-box">
+                    <span class="details">Contact Name</span>
+                    <input type="text" id="contact_name" name="contact_name" value="{{ ticket.contact_name }}" readonly>
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Contact Number</span>
+                    <input type="text" id="contact_number" name="contact_number" value="{{ ticket.contact_number }}" readonly>
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Call Time</span>
+                    <input type="text" id="call_time" name="call_time" value="{{ ticket.call_time | date:'d-m-Y H:i:s' }}" readonly>
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Discussion</span>
+                    <input type="text" id="discussion" name="discussion" value="{{ ticket.discussion }}" readonly>
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Equipment</span>
+                    <input type="text" id="equipment" name="equipment" value="{{ ticket.equipment }}" readonly>
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Place</span>
+                    <input type="text" id="place" name="place" value="{{ ticket.place }}" readonly>
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Priority</span>
+                    <input type="text" id="priority" name="priority" value="{{ ticket.priority }}" readonly>
+                </div>
+
+
+                <div class="input-box">
+                    <span class="details">Fisrt Follow-up: </span>
+                    <input type="text" id="first_follow_up" name="first_follow_up" value="{{ ticket.first_follow_up }}">
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Second Follow-up: </span>
+                    <input type="text" id="second_follow_up" name="second_follow_up" value="{{ ticket.second_follow_up }}">
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Third Follow-up: </span>
+                    <input type="text" id="third_follow_up" name="third_follow_up" value="{{ ticket.third_follow_up }}">
+                </div>
+
+                <div class="input-box">
+                    <span class="details">State</span>
+                    <select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo5" name="state" required>
+                        <option selected>{{ticket.state}}</option>
+                        <option value="New">New</option>
+                        <option value="In progress">In progress</option>
+                        <option value="Completed">Completed</option>
+                      </select>
+                </div>
+            
+            <div class="pt-1 mb-4">
+                <button type='submit' class="btn btn-dark btn-lg btn-block">Update Ticket</button>
+             </div>
+        </form>
+      </div>
+    </section>
+
+
+    <script src="script.js"></script>
+</body>
+</html>
+
+{% comment %} <!DOCTYPE html>
 <html>
 <head>
     <title>Editar Ticket</title>
@@ -17,15 +304,7 @@
                     <form method="post">
                         {% csrf_token %}
 
-                        <input type="hidden" name="id_unico" value="{{ ticket.id_unico }}">
                         
-                        <p for="ticket.ticket_number"><b>Ticket ID: </b><input type="text" id="ticket_number" name="ticket_number" value="{{ ticket.ticket_number }}" readonly></p>
-
-                        <p for="call_time"><b>Call time: </b><input type="text" id="call_time" name="call_time" value="{{ ticket.call_time | date:'d-m-Y H:i:s' }}" readonly></p>
-
-                        <p for="ticket.priority"><b>Priority: </b><input type="text" id="priority" name="priority" value="{{ ticket.priority }}" readonly></p>
-                    
-                        <p for="ticket.discussion"><b>Discussion: </b><input type="text" id="discussion" name="discussion" value="{{ ticket.discussion }}" readonly></p>
                     
                         <p for="state"><b>State: </b><select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo5" name="state" required>
                             <option selected>{{ticket.state }}</option>
@@ -63,4 +342,4 @@
     </form>
 {% endblock content %}
 </body>
-</html>
+</html> {% endcomment %}
