--- a/qta/templates/mainscreen.html
+++ b/qta/templates/mainscreen.html
@@ -242,7 +242,6 @@
           
           .searchInput {
             flex: 1; /* Para que el input ocupe el espacio restante */
-            weight: 100%;
             height: 90px;
             border-radius: 10px;
             background-color: #f2f2f2;
@@ -251,7 +250,7 @@
             padding: 10px;
             font-size: 1.4rem; /* Tamaño de fuente ajustado */
             outline: none;
-            position: relative;
+            items-align: start;
           }
           
           .searchInput:focus {
@@ -282,7 +281,7 @@
             border-radius: .5rem;
             color: var(--green);
             font-weight: bold;
-            weight: 100%;
+            weight: 100px;
         }
 
         .selectElement{
@@ -293,6 +292,28 @@
          color: var(--green);
          font-size: 4.5rem;
         }
+
+        h4 {
+         font-size: 2rem;
+        }
+
+        .btn3{
+         display: inline-block;
+         margin-top: 1rem;
+         padding: .5rem;
+         padding-left: 1rem;
+         border: var(--border);
+         border-radius: .5rem;
+         box-shadow: var(--box-shadow);
+         color: var(--green);
+         cursor: pointer;
+         font-size: 1.7rem;
+     }
+
+     .btn3:hover{
+         background: var(--green);
+         color: #fff;
+     }
 
      </style>
    </head>
@@ -314,6 +335,7 @@
          </nav>
      </header>
 
+
      <section class="searchBar"> 
       <form action="" class="searchInput">
          <select class="form-control selectElement" aria-label="Small select example" type="text" id="campo5" name="searchState">
@@ -324,11 +346,10 @@
          </select>
          <button type="submit" class="btn2">Search</button>
          <a href={% url "ticket" %} class="btn btn-primary">New Ticket</a>
-         <h4 style="color: #16a085">HI! {{ user.username | upper}}</h4> 
+         <h4 style="color: #16a085">HI! {{ user.username | upper}}</h4>
        </form>
-
-  </section>
-
+      </section>
+  
      <section class="icons-container" id="icons-container">
          {% for ticket in tickets %}
          {% if ticket.priority == "Very important" and ticket.state != 'Completed'%}
@@ -393,97 +414,3 @@
     
    </body>
 </html>
-
-{% comment %} <br>
-            <h4 style="color: #ffffff">HI! {{ user.username | upper}}</h4>       
-            <form action="">
-               <div class="mb-3">
-                  <label for="searchState" class="form-label" style="color:#ffffff">
-                     Search for State:
-                  </label>
-                  <select class="form-control" aria-label="Small select example" type="text" id="campo5" name="searchState">
-                     <option selected>{{ticket.state }}</option>
-                     <option value="New">New</option>
-                     <option value="In progress">In progress</option>
-                     <option value="Completed">Completed</option>
-                  </select>
-               </div>
-               <button type="submit" class="btn btn-primary">Search</button>
-            </form>
-         </br>
-         <a href={% url "ticket" %} class="btn btn-primary">New Ticket</a>
-         <br></br>
-         <div class="row row-cols-1 row-cols-md-3 g-4">
-            {% for ticket in tickets %}
-               {% if ticket.priority == "Very important" and ticket.state != 'Completed'%}
-                  <div class="col">
-                     <div class="card">
-                        <div class="card-body">
-                           <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
-                           <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
-                           <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-                           <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-                           <b>Priority: </b><p>{{ ticket.priority }}</p>
-                           <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
-                           <b>Place: </b><p class="place">{{ ticket.place}}</p>
-                           <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
-                        </div>
-                     </div>
-                  </div>
-               {% endif %}
-            {% endfor %}
-            {% for ticket in tickets %}
-               {% if ticket.priority == "Important" and ticket.state != 'Completed' %}
-                  <div class="col">
-                     <div class="card">
-                        <div class="card-body">
-                           <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
-                           <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
-                           <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-                           <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-                           <b>Priority: </b><p>{{ ticket.priority }}</p>
-                           <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
-                           <b>Place: </b><p class="place">{{ ticket.place}}</p>
-                           <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
-                        </div>
-                     </div>
-                  </div>
-               {% endif %}
-            {% endfor %}
-            {% for ticket in tickets %}
-               {% if ticket.priority == "Urgent" and ticket.state != 'Completed' %}
-                  <div class="col">
-                     <div class="card">
-                        <div class="card-body">
-                           <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
-                           <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
-                           <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-                           <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-                           <b>Priority: </b><p>{{ ticket.priority }}</p>
-                           <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
-                           <b>Place: </b><p class="place">{{ ticket.place}}</p>
-                           <a href={% url "more_info"  ticket.ticket_number %} class="btn btn-primary">More Information</a>
-                        </div>
-                     </div>
-                  </div>
-               {% endif %}
-            {% endfor %}
-            {% for ticket in tickets %}
-               {% if ticket.priority == "Regular" and ticket.state != 'Completed' %}
-                  <div class="col">
-                     <div class="card">
-                        <div class="card-body">
-                           <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
-                           <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
-                           <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-                           <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-                           <b>Priority: </b><p>{{ ticket.priority }}</p>
-                           <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
-                           <b>Place: </b><p class="place">{{ ticket.place}}</p>
-                           <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
-                        </div>
-                     </div>
-                  </div>
-               {% endif %}
-            {% endfor %}
-         </div> {% endcomment %}
