--- a/qta/templates/ticket.html
+++ b/qta/templates/ticket.html
@@ -1,56 +1,248 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Nuevo Ticket</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QTA - Quick Ticket Assistant</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+
+        :root{
+            --green: #16a085;
+            --black: #444;
+            --light-color: #777;
+            --box-shadow:.5rem .5rem 0 rgba(22, 160, 133, .2);
+            --text-shadow:.4rem .4rem 0 rgba(0, 0, 0, .2);
+            --border:.2rem solid var(--green);
+        }
+
+        *{
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            outline: none;
+            border: none;
+            text-transform: capitalize;
+            transition: all .2s ease-out;
+            text-decoration: none;
+        }
+
+        section{
+            padding: 2rem 9%;
+        }
+
+        section:nth-child(even){
+            background: transparent;
+        }
+
+        .btn{
+            display: inline-block;
+            margin-top: 1rem;
+            padding: .5rem;
+            padding-left: 1rem;
+            border: var(--border);
+            border-radius: .5rem;
+            box-shadow: var(--box-shadow);
+            color: var(--green);
+            cursor: pointer;
+            font-size: 1.7rem;
+        }
+
+        .btn span{
+            padding: .7rem 1rem;
+            border-radius: .5rem;
+            background: var(--green);
+            color: #fff;
+            margin-left: .5rem;
+        }
+
+        .btn:hover{
+            background: var(--green);
+            color: #fff;
+        }
+
+        .btn:hover span{
+            color: var(--green);
+            background: #fff;
+            margin-left: 1rem;
+        }
+
+        html{
+            font-size: 62.5%;
+            overflow-x: hidden;
+            scroll-padding-top: 7rem;
+            scroll-behavior: smooth;
+
+        }
+
+        .header{
+            padding: 2rem 9%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: #fff;
+        }
+
+        .header .logo{
+            font-size: 2.5rem;
+            color: var(--black);
+        }
+
+        .header .logo i{
+            color: var(--green);
+        }
+
+        .header .navbar a{
+            font-size: 1.7rem;
+            color: var(--light-color);
+            margin-left: 2rem
+        }
+
+        .header .navbar a:hover{
+            color: var(--green);
+        }
+
+        body{
+            display: flex;
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            background: linear-gradient(135deg, #16a085, #29cdb2);
+        }
+
+        .Formulario{
+            margin-top: 8rem;
+        }
+        
+        .container{
+            max-width: 700px;
+            width: 100%;
+            background: #fff;
+            padding: 25px 30px;
+            border-radius: 5px;
+        }
+
+        .container .title{
+            font-size: 25px;
+            font-weight: 500;
+            position: relative;
+        }
+
+        .container .title::before{
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            height: 3px;
+            width: 30px;
+            background: linear-gradient(135deg, #16a085, #29cdb2);
+        }
+
+        .container form .user-details{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin: 20px 0 12px 0;
+        }
+
+        form .user-details .input-box{
+            margin-bottom: 15px;
+            width: calc(100% / 2 - 20px);
+        }
+
+        .user-details .input-box .details{
+            display: block;
+            font-weight: 500;
+            margin-bottom: 5px;
+        }
+
+        .user-details .input-box input{
+            height: 45px;
+            width: 100%;
+            outline: none;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            padding-left: 15px;
+            font-size: 16px;
+            border-bottom-width: 2px;
+            transition: all 0.3s ease;
+        }
+
+        .user-details .input-box input:focus,
+        .user-details .input-box input:valid{
+            border-color: #29cdb2;
+        }
+
+
+    </style>
 </head>
 <body>
-{% extends 'base.html' %}
-{% block content %}
-<section class="vh-90" style="background-color: #63E0FF;">
-  <div class="container py-5 h-100">
-  <div class="row d-flex justify-content-center align-items-center h-100">
-     <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem;">
-        <div class="row g-0">
 
-           <div class="col-md-6 col-lg-12 d-flex align-items-center">
-              <div class="card-body p-4 p-lg-7 text-black">
+    <header class="header">
+        <a href={% url 'home' %} class="logo"><i class="fas fa-heartbeat"></i> QTA</a>
+    
+        <nav class="navbar">
+            <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Service</a>
+            <a class="nav-link" href="#">More</a>
+            {% if request.user.is_authenticated %}
+            <a class="nav-link" href={% url "exit" %}>Sign out</a>
+            {% else %}
+            <a class="nav-link" href={% url "login" %} >Sign in</a>
+            {% endif %}
+        </nav>
+    </header>
 
-              <form actions="" method='post'>
-                 {% csrf_token %}
+    <section class="Formulario">
+      <div class="container">
+        <div class="title">Registration New Ticket</div>
+        <form actions="" method='post'>
+            {% csrf_token %}
+            <div class="user-details">
+                <div class="input-box">
+                    <span class="details">Contact Name</span>
+                    <input type="text" name="contact_name" placeholder="Enter customer name" id='campo8' class="form-control form-control-lg" required/>
+                </div>
 
-                 <div class="d-flex align-items-center mb-3 pb-1">
-                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219; "></i>
-                    <span class="h1 fw-bold mb-0">New Ticket</span>
-                 </div>
+                <div class="input-box">
+                    <span class="details">Contact Number</span>
+                    <input type="text" name="contact_number" placeholder="Enter customer number" id='campo9' class="form-control form-control-lg" required/>
+                </div>
 
-                 <div class="form-outline mb-4">
-                    <label class="form-label" for="call_time">Call Time</label>
+                <div class="input-box">
+                    <span class="details">Call Time</span>
                     <input type="datetime-local" name="call_time" id='campo2' class="form-control form-control-lg" required/>
                 </div>
 
-                <div class="form-outline mb-4">
-                    <label class="form-label" for="contact_name">Contact name</label>
-                    <input type="text" name="contact_name" id='campo8' class="form-control form-control-lg" required/>
-                </div>
-
-                <div class="form-outline mb-4">
-                    <label class="form-label" for="contact_number">Contact number</label>
-                    <input type="text" name="contact_number" id='campo9' class="form-control form-control-lg" required/>
-                </div>
-
-                <div class="form-outline mb-4">
-                    <label class="form-label" for="discussion">Discussion</label>
+                <div class="input-box">
+                    <span class="details">Discussion</span>
                     <input type="text" name="discussion" id='campo4' class="form-control form-control-lg" required/>
                 </div>
 
-                <div class="form-outline mb-4">
-                    <label class="form-label" for="equipment">Equipment</label>
+                <div class="input-box">
+                    <span class="details">Equipment</span>
                     <input type="text" name="equipment" id='campo7' class="form-control form-control-lg" required/>
-                </div>              
+                </div>
 
-                <div class="form-outline mb-4">
-                    <label class="form-label" for="ticket.number">Priority</label>
+                <div class="input-box">
+                    <span class="details">Place</span>
+                    <input type="text" name="place" id='campo6' class="form-control form-control-lg" required/>
+                </div>
+
+                <div class="input-box">
+                    <span class="details">Priority</span>
                     <select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo3" name="priority" required>
                       <option selected>...</option>
                       <option value="Very important">Very important</option>
@@ -60,34 +252,24 @@
                     </select>
                 </div>
 
-                <div class="form-outline mb-4">
-                    <label class="form-label" for="place">Place</label>
-                    <input type="text" name="place" id='campo6' class="form-control form-control-lg" required/>
+                <div class="input-box">
+                    <span class="details">State</span>
+                    <select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo5" name="state" required>
+                        <option value="New">New</option>
+                        <option value="In progress">In progress</option>
+                        <option value="Completed">Completed</option>
+                      </select>
                 </div>
+            
+            <div class="pt-1 mb-4">
+                <button type='submit' class="btn btn-dark btn-lg btn-block">Create Ticket</button>
+             </div>
+        </form>
+      </div>
+    </section>
 
-                <div class="form-outline mb-4">
-                  <label class="form-label" for="State">State</label>
-                  <select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo5" name="state" required>
-                    <option value="New">New</option>
-                    <option value="In progress">In progress</option>
-                    <option value="Completed">Completed</option>
-                  </select>
-                </div>
 
-                 <div class="pt-1 mb-4">
-                    <button type='submit' class="btn btn-dark btn-lg btn-block">Create Ticket</button>
-                 </div>
-
-              </form>
-
-              </div>
-           </div>
-        </div>
-        </div>
-     </div>
-  </div>
-  </div>
-</section>
-{% endblock content %}
+    <script src="script.js"></script>
 </body>
 </html>
+
