--- a/qta/templates/ticket.html
+++ b/qta/templates/ticket.html
@@ -194,7 +194,7 @@
     
         <nav class="navbar">
             <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href={% url 'about' %}>About</a>
             <a class="nav-link" href="#">Service</a>
             <a class="nav-link" href="#">More</a>
             {% if request.user.is_authenticated %}
